2008-01-16  David Smith  <dsmith@redhat.com>

	PR 5608.
	* tapsets.cxx (visit_target_symbol): Print an error when trying to
	use a marker argument as an array or structure.

2008-01-16  Eugene Teo  <eteo@redhat.com>

	* stapfuncs.5.in: Document signal.stp tapset functions.

2008-01-14  Martin Hunt  <hunt@redhat.com>
	* translate.cxx (emit_module_init): Call _stp_print_kernel_info()
	to print out version information and internal memory usage stats.

2008-01-14  Martin Hunt  <hunt@redhat.com>
	* translate.cxx (emit_module_exit): When using timing, delete timing
	stats when finished.

2008-01-12  Frank Ch. Eigler  <fche@elastic.org>

	* configure.ac: Generate a build tree SNAPSHOT file from git-rev-list,
	if we suspect the source tree came from git.
	* configure: Regenerated.

2008-01-12  Frank Ch. Eigler  <fche@elastic.org>

	PR 5603.
	* configure.ac: Add "--enable-ssp" to select -fstack-protector-all
	and similar runtime checking directives.
	* configure: Regenerated.

2008-01-09  David Smith  <dsmith@redhat.com>

	* systemtap.spec.in: Since "make check" was removed
	from the rpm build step, we no longer need to require dejagnu at
	build time.

2008-01-09  Frank Ch. Eigler  <fche@elastic.org>

	* tapsets.cxx (dwflpp::setup): Improve missing kernel-debuginfo
	message.

2008-01-02  Frank Ch. Eigler  <fche@elastic.org>

	From Mark McLoughlin <markmc@redhat.com>:
	* main.cxx (main): Set/restore umask around mkdtemp().

2007-12-27  Jim Keniston  <jkenisto@us.ibm.com>

	* runtime/uprobes/uprobes_x86_64.c: Fix handling of indirect
	jmps and calls that use rip-relative addressing.  Allow probing
	of opcode 0x63.

2007-12-13  Masami Hiramatsu  <mhiramat@redhat.com>

	* stap.1.in: Document about relay buffer sharing.
	* NEWS: Document about relay buffer sharing and staplog crash extension.

2007-12-12  Wenji Huang <wenji.huang@oracle.com>

        PR 5470
        * parse.cxx (parser::parse_probe_point): Add checking pointer t.

2007-12-11  Frank Ch. Eigler  <fche@elastic.org>